# Payment-mcp

./: .env  pyproject.toml
src/: __init__.py  auth.py  config.py  mcp.py  server.py
tests/: test_server.py
